# financial-etl-framework

./: .env.example  .gitignore  ETL_csv.ipynb  IMPROVEMENTS.md  README.md  SECURITY_NOTES.md  byd.csv  cad_bonus.ipynb  conn.py  dash.ipynb  pytest.ini  requirements.txt  sheets.csv
Datasets/: atacado.csv  controle.csv  dta_emplacamento.csv  performance.csv
Daywork/: 12-12-2025.ipynb
controlling_postgreSQL/: .coveragerc  config.py  conn.py  daily_report  rollback.py
controlling_postgreSQL/Daily_work/: 08_12_2025.ipynb
controlling_postgreSQL/Datasets/: dpto.csv  outubro.csv  pdi.csv
controlling_postgreSQL/byd/tables/: insert_data_vendas.ipynb
controlling_postgreSQL/controlling_postgreSQL/notebooks/: documentacao.ipynb
controlling_postgreSQL/controlling_postgreSQL/schemas/byd/tables/: create_controle.sql  inser_data_controladoria.ipynb  insert_data_vendas.ipynb
controlling_postgreSQL/controlling_postgreSQL/schemas/byd/tables/create/: create_test.sql
controlling_postgreSQL/controlling_postgreSQL/schemas/byd/tables/remove/: remove_columns_div.sql
controlling_postgreSQL/controlling_postgreSQL/schemas/byd/triggers/: bonus_calculation()_v01.sql  propagar_campos_pai_para_filha_v01.sql
controlling_postgreSQL/notebooks/: 23-12-2025.ipynb  bokeh.ipynb  bonus_view_export.csv  divergencia.ipynb  documentacao.ipynb  nd_study.py
controlling_postgreSQL/schemas/byd/tables/: inser_data_controladoria.ipynb
controlling_postgreSQL/schemas/byd/tables/alter/: null.controladoria.sql
controlling_postgreSQL/schemas/byd/tables/convert_types/: type_dpto.sql
controlling_postgreSQL/schemas/byd/tables/create/: create_colum.sql  create_controle.sql  create_user_nd.sql  view_pendente_vericacao.sql
controlling_postgreSQL/schemas/byd/tables/extract/: bonus_view_export.csv  documentacao.ipynb
controlling_postgreSQL/schemas/byd/tables/insert/: insert_pdi_atacado.ipynb
controlling_postgreSQL/schemas/byd/tables/triggers/: propagar_refaturado_para_cadastro_v01.sql
controlling_postgreSQL/schemas/byd/tables/view&conults/: analitycs.ipynb  byd_bonus_view.sql  byd_compra.sql  byd_divergencia.sql  db_compras.sql  pendente_verificacao_view.sql
controlling_postgreSQL/schemas/byd/triggers/: sync_delete_v01.sql
controlling_postgreSQL/schemas/byd/triggers/tables/: atualizar_status_refaturado()_v01.sql  sync_insert_v01.sql
controlling_postgreSQL/tests/: test_conn.py  test_rollback.py
financial-etl-framework/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  check_table_structure.py  conn.py  coverage.json  executar_manual.bat  pyproject.toml  pytest.ini  relatorio_divergencias.py  requirements_api.txt  run_tests.bat  run_tests.py  setup_audit_schema.py
financial-etl-framework/.github/workflows/: ci.yml
financial-etl-framework/controlling_postgreSQL/: .gitattributes  rollback.py
financial-etl-framework/controlling_postgreSQL/schemas/byd/tables/view&conults/: byd_bonus_view.sql  byd_controladoria.sql  byd_divergencia.sql  pendente_verificacao_view.sql
financial-etl-framework/docs/: API_REFERENCE.md  CHANGELOG.md  DEPLOYMENT_GUIDE.md  IMPROVEMENTS_SUMMARY.md  QUICK_REFERENCE.md  SISTEMA_IMPLEMENTADO.md  TECHNICAL_DOCUMENTATION.md  TESTING_GUIDE.md
financial-etl-framework/notebooks/: divergencia.ipynb  documentacao.ipynb
financial-etl-framework/schemas/audit/: create_audit_tables.sql
financial-etl-framework/schemas/byd/tables/alter/: compras.sql
financial-etl-framework/schemas/byd/tables/convert_types/: nantonull.sql
financial-etl-framework/schemas/byd/tables/create/: create_schema_nd.sql
financial-etl-framework/schemas/byd/tables/insert/: insert_data_controle.py
financial-etl-framework/schemas/byd/tables/view&conults/: byd_db_compras_byd.sql  byd_divergencia.sql  pendente_verificacao_view.sql
financial-etl-framework/schemas/byd/triggers/: bonus_calculation()_v01.sql  fn_update_timestamp_v01.sql  sync_insert_v01.sql
financial-etl-framework/scripts/: consultar_pendentes.py
financial-etl-framework/src/financial_etl/: __init__.py  config.py  conn.py  rollback.py
financial-etl-framework/src/financial_etl/api/: main.py
financial-etl-framework/src/financial_etl/api/routers/: __init__.py  audit.py  divergences.py  reports.py
financial-etl-framework/src/financial_etl/automation/: __init__.py  daily_processor.py  scheduler.py
financial-etl-framework/src/financial_etl/services/: __init__.py  audit_logger.py  divergence_processor.py  notification_service.py
financial-etl-framework/tests/: conftest.py  test_api.py  test_audit_logger.py  test_config.py  test_conn.py  test_divergence_processor.py  test_notification_service.py  test_rollback.py
notebooks/: CV_optimizer.ipynb  CV_optimizer_pt.ipynb  bonus_view_export.csv  divergencia.ipynb  documentacao.ipynb
schemas/byd/tables/alter/: null.controladoria.sql
schemas/byd/tables/create/: create_controle.sql  divergencia.sql
schemas/nd/: edit_nd.sql
